# forqan-academy-scraper-and-explainer

./: .gitignore  README.md  pyproject.toml  requirements-user-installed-without-versions.txt  requirements-user-installed.txt  requirements-without-versions.txt  requirements.txt  setup.cfg  setup.py
doc/: project_overview.drawio
doc/extracting_video_desc_logic/: possible_htmls.md
forqan_academy_scraper_and_explainer/forqan_academy_scraper/: scraper.py
forqan_academy_scraper_and_explainer/logaru_logger/: the_logger.py
forqan_academy_scraper_and_explainer/odyash_general_functions/: odyash_general_functions.py
scripts/: main.py  requirements.txt  requirements_without_versions.txt  response.txt
scripts/workspace_related/: Microsoft.PowerShell_profile.ps1
src/: forqan_scraper.py
tests/: pre-commit.sample  test_forqan_scraper.py
