# setup.cfg
# Explanation for this file can be found in the comments of the `setup.py` file
# Debugging NOTE: don't add "# " comments to the right of the code, 
#                 as they are picked-up by the setup.py file and will therefore cause errors.

[metadata]
name = Forqan-Academy-Scraper-And-Explainer
version = 1.0
author = <OdyAsh>
author_email = odyash1@gmail.com
description = "Scrape then explain the content of Forqan Academy's videos"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OdyAsh/forqan-academy-scraper-and-explainer
classifiers =
    Programming Language :: Python :: 3
    # Operating System :: OS Independent
# license_files = LICENSE.txt

[options]
# the line below will automatically find all packages in the project
packages = find:

# the code block below will allow us to import packages without the folder name
# e.g., import `subfolder_1.module_1`
#       instead of `import forqan_academy_scraper_and_explainer.subfolder_1.module_1`

package_dir = 
    =forqan_academy_scraper_and_explainer
[options.packages.find]
where = forqan_academy_scraper_and_explainer
# the line below will include all packages in the folder mentioned in `package_dir`
include = *
        

# comment code block above and uncomment code block below 
# if you want to import all packages, such that they will be preceeded by the folder name when being imported
# i.e., the reverse of the "e.g." mentioned in the code block above

# [options.packages.find]
# include = forqan_academy_scraper_and_explainer